--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:5174
+# VITE_API_URL=http://localhost:5174
 
 # # Uncomment this for production
-# VITE_API_URL=https://vite.deskassure.com
+VITE_API_URL=https://vite.deskassure.com
